// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ShiftViewUserSettings > renders correctly 1`] = `
<div>
  <dialog-toolbar-stub
    color="white"
    iconcolor="secondary-text"
    title="View settings"
    titleicon=""
  />
  <v-card-text-stub
    class="pb-0"
    tag="div"
  >
    <v-radio-group-stub
      centeraffix="true"
      color="primary"
      density="default"
      error="false"
      errormessages=""
      falseicon="$radioOff"
      focused="false"
      glow="false"
      height="auto"
      hidedetails="true"
      hidespinbuttons="false"
      iconcolor="false"
      inline="true"
      maxerrors="1"
      messages=""
      modelvalue="false"
      persistenthint="false"
      ripple="true"
      rules=""
      trueicon="$radioOn"
      type="radio"
      valuecomparator="[Function]"
    >
      <v-row-stub
        dense="false"
        density="default"
        nogutters="false"
        tag="div"
      >
        <v-col-stub
          class="d-flex flex-column align-center pa-0"
          cols="12"
          lg="false"
          md="false"
          sm="6"
          tag="div"
          xl="false"
          xxl="false"
        >
          <img
            alt="mr-evocon-standard"
            class="mx-auto"
            eager=""
            src="/src/assets/images/mr-evocon-standard.svg"
          />
          <v-radio-stub
            class="my-4"
            density="default"
            error="false"
            falseicon="$radioOff"
            inline="false"
            label="Standard"
            ripple="true"
            trueicon="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M10 17L5 12L6.41 10.59L10 14.17L17.59 6.58L19 8L10 17Z"
            value="true"
            valuecomparator="[Function]"
          />
        </v-col-stub>
        <v-col-stub
          class="d-flex flex-column align-center pa-0"
          cols="12"
          lg="false"
          md="false"
          sm="6"
          tag="div"
          xl="false"
          xxl="false"
        >
          <img
            alt="mr-evocon-standard-and-fun"
            class="mx-auto"
            eager=""
            src="/src/assets/images/mr-evocon-standard-and-fun.svg"
          />
          <v-radio-stub
            class="my-4"
            density="default"
            error="false"
            falseicon="$radioOff"
            inline="false"
            label="Standard + Fun"
            ripple="true"
            trueicon="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M10 17L5 12L6.41 10.59L10 14.17L17.59 6.58L19 8L10 17Z"
            value="false"
            valuecomparator="[Function]"
          />
        </v-col-stub>
      </v-row-stub>
    </v-radio-group-stub>
    <v-row-stub
      class="mb-2"
      dense="false"
      density="default"
      nogutters="false"
      tag="div"
    >
      <v-col-stub
        class="pa-1"
        cols="12"
        lg="false"
        md="false"
        sm="6"
        tag="div"
        xl="false"
        xxl="false"
      >
        <selection-input-stub
          checkbox="true"
          coloractiveprepend="false"
          dark="false"
          disabled="false"
          disabledvalues=""
          emittoggleall="false"
          emptyequalsallselected="false"
          error="false"
          filled="true"
          groupidkey="id"
          groups=""
          groupsorderby="name"
          hiddenitemscount="0"
          hidesearch="true"
          hint="Shift quantity & Hour quantity"
          inverted="false"
          isgroupedselect="false"
          issingleselect="true"
          itemflag=""
          itemgroupidkey="groupId"
          items="[object Object],[object Object]"
          itemsecondarytext=""
          itemsmap="[object Object]"
          itemtertiarytext=""
          itemtext="name"
          itemvalue="value"
          loading="false"
          menuinputtype="primary"
          modelvalue="true"
          numericorderby="false"
          placeholder=""
          prepend-inner-icon="M15,4A8,8 0 0,1 23,12A8,8 0 0,1 15,20A8,8 0 0,1 7,12A8,8 0 0,1 15,4M15,18A6,6 0 0,0 21,12A6,6 0 0,0 15,6A6,6 0 0,0 9,12A6,6 0 0,0 15,18M3,12C3,14.61 4.67,16.83 7,17.65V19.74C3.55,18.85 1,15.73 1,12C1,8.27 3.55,5.15 7,4.26V6.35C4.67,7.17 3,9.39 3,12Z"
          prependtext=""
          removenonexistentselections="false"
          required="true"
          showemptyarrayasallselected="false"
          someselected="false"
          totalcount="0"
          usechips="false"
        />
      </v-col-stub>
      <v-col-stub
        class="pa-1"
        cols="12"
        lg="false"
        md="false"
        sm="6"
        tag="div"
        xl="false"
        xxl="false"
      >
        <selection-input-stub
          checkbox="true"
          coloractiveprepend="false"
          dark="false"
          disabled="false"
          disabledvalues=""
          emittoggleall="false"
          emptyequalsallselected="false"
          error="false"
          filled="true"
          groupidkey="id"
          groups=""
          groupsorderby="name"
          hiddenitemscount="0"
          hidesearch="true"
          hint="Unit"
          inverted="false"
          isgroupedselect="false"
          issingleselect="true"
          itemflag=""
          itemgroupidkey="groupId"
          items="[object Object],[object Object]"
          itemsecondarytext=""
          itemsmap="[object Object]"
          itemtertiarytext=""
          itemtext="name"
          itemvalue="value"
          loading="false"
          menuinputtype="primary"
          modelvalue="true"
          numericorderby="false"
          placeholder=""
          prepend-inner-icon="M1.39,18.36L3.16,16.6L4.58,18L5.64,16.95L4.22,15.54L5.64,14.12L8.11,16.6L9.17,15.54L6.7,13.06L8.11,11.65L9.53,13.06L10.59,12L9.17,10.59L10.59,9.17L13.06,11.65L14.12,10.59L11.65,8.11L13.06,6.7L14.47,8.11L15.54,7.05L14.12,5.64L15.54,4.22L18,6.7L19.07,5.64L16.6,3.16L18.36,1.39L22.61,5.64L5.64,22.61L1.39,18.36Z"
          prependtext=""
          removenonexistentselections="false"
          required="true"
          showemptyarrayasallselected="false"
          someselected="false"
          totalcount="0"
          usechips="false"
        />
      </v-col-stub>
    </v-row-stub>
    <evocon-v-checkbox-stub
      class="pl-2 my-2"
      dark="false"
      disabled="false"
      label="Hide changeover button from footer"
      modelvalue="false"
      sublabel=""
      truevalue="true"
    />
    <div
      class="d-flex align-center"
    >
      <span>
        <evocon-v-checkbox-stub
          class="pl-2 my-2"
          dark="false"
          disabled="false"
          label="Hide checklist pins from timeline"
          modelvalue="false"
          sublabel=""
          truevalue="true"
        />
      </span>
      <icon-with-tooltip-stub
        additionalclasses="ml-2"
        color=""
        icon="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
        iconclickedfn="[Function]"
        iconid=""
        iconsrc=""
        size="16"
        tooltiplocation="top"
        tooltiptext="Learn more"
      />
    </div>
    <v-row-stub
      class="mb-2"
      dense="false"
      density="default"
      nogutters="false"
      tag="div"
    >
      <v-col-stub
        class="pa-1"
        cols="12"
        lg="false"
        md="false"
        sm="false"
        tag="div"
        xl="false"
        xxl="false"
      >
        <selection-input-stub
          checkbox="true"
          coloractiveprepend="false"
          dark="false"
          disabled="false"
          disabledvalues=""
          emittoggleall="false"
          emptyequalsallselected="false"
          error="false"
          filled="true"
          groupidkey="id"
          groups="[object Object]"
          groupsorderby="name"
          hiddenitemscount="0"
          hidesearch="false"
          hint="Select which checklists appear in Shift View"
          inverted="false"
          isgroupedselect="true"
          issingleselect="false"
          itemflag=""
          itemgroupidkey="groupId"
          items="[object Object],[object Object],[object Object]"
          itemsecondarytext=""
          itemsmap="[object Object]"
          itemtertiarytext=""
          itemtext="name"
          itemvalue="id"
          loading="false"
          menuinputtype="primary"
          modelvalue=""
          numericorderby="false"
          placeholder=""
          prependtext=""
          removenonexistentselections="false"
          required="false"
          showemptyarrayasallselected="true"
          someselected="false"
          totalcount="0"
          usechips="false"
        />
      </v-col-stub>
    </v-row-stub>
  </v-card-text-stub>
  <v-card-actions-stub
    class="justify-end"
    tag="div"
  >
    <evocon-v-button-stub
      color=""
      icon=""
      iconcolor=""
      text="Close"
      textclass=""
      type="secondary"
    />
    <evocon-v-button-stub
      color="primary"
      icon=""
      iconcolor=""
      text="Save"
      textclass=""
      type="primary"
    />
  </v-card-actions-stub>
</div>
`;

exports[`ShiftViewUserSettings > renders correctly in mobile 1`] = `
<div>
  <dialog-toolbar-stub
    color="white"
    iconcolor="secondary-text"
    title="View settings"
    titleicon=""
  />
  <v-card-text-stub
    class="pb-0"
    tag="div"
  >
    <v-radio-group-stub
      centeraffix="true"
      color="primary"
      density="default"
      error="false"
      errormessages=""
      falseicon="$radioOff"
      focused="false"
      glow="false"
      height="auto"
      hidedetails="true"
      hidespinbuttons="false"
      iconcolor="false"
      inline="false"
      maxerrors="1"
      messages=""
      modelvalue="false"
      persistenthint="false"
      ripple="true"
      rules=""
      trueicon="$radioOn"
      type="radio"
      valuecomparator="[Function]"
    >
      <v-row-stub
        dense="false"
        density="default"
        nogutters="false"
        tag="div"
      >
        <v-col-stub
          class="d-flex flex-column align-center pa-0 mb-2"
          cols="12"
          lg="false"
          md="false"
          sm="6"
          tag="div"
          xl="false"
          xxl="false"
        >
          <img
            alt="mr-evocon-standard"
            class="mx-auto"
            eager=""
            src="/src/assets/images/mr-evocon-standard.svg"
          />
          <v-radio-stub
            class=""
            density="default"
            error="false"
            falseicon="$radioOff"
            inline="false"
            label="Standard"
            ripple="true"
            trueicon="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M10 17L5 12L6.41 10.59L10 14.17L17.59 6.58L19 8L10 17Z"
            value="true"
            valuecomparator="[Function]"
          />
        </v-col-stub>
        <v-col-stub
          class="d-flex flex-column align-center pa-0 mb-2"
          cols="12"
          lg="false"
          md="false"
          sm="6"
          tag="div"
          xl="false"
          xxl="false"
        >
          <img
            alt="mr-evocon-standard-and-fun"
            class="mx-auto"
            eager=""
            src="/src/assets/images/mr-evocon-standard-and-fun.svg"
          />
          <v-radio-stub
            class=""
            density="default"
            error="false"
            falseicon="$radioOff"
            inline="false"
            label="Standard + Fun"
            ripple="true"
            trueicon="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M10 17L5 12L6.41 10.59L10 14.17L17.59 6.58L19 8L10 17Z"
            value="false"
            valuecomparator="[Function]"
          />
        </v-col-stub>
      </v-row-stub>
    </v-radio-group-stub>
    <v-row-stub
      class="mb-2"
      dense="false"
      density="default"
      nogutters="false"
      tag="div"
    >
      <v-col-stub
        class="pa-1"
        cols="12"
        lg="false"
        md="false"
        sm="6"
        tag="div"
        xl="false"
        xxl="false"
      >
        <selection-input-stub
          checkbox="true"
          coloractiveprepend="false"
          dark="false"
          disabled="false"
          disabledvalues=""
          emittoggleall="false"
          emptyequalsallselected="false"
          error="false"
          filled="true"
          groupidkey="id"
          groups=""
          groupsorderby="name"
          hiddenitemscount="0"
          hidesearch="true"
          hint="Shift quantity & Hour quantity"
          inverted="false"
          isgroupedselect="false"
          issingleselect="true"
          itemflag=""
          itemgroupidkey="groupId"
          items="[object Object],[object Object]"
          itemsecondarytext=""
          itemsmap="[object Object]"
          itemtertiarytext=""
          itemtext="name"
          itemvalue="value"
          loading="false"
          menuinputtype="primary"
          modelvalue="true"
          numericorderby="false"
          placeholder=""
          prepend-inner-icon="M15,4A8,8 0 0,1 23,12A8,8 0 0,1 15,20A8,8 0 0,1 7,12A8,8 0 0,1 15,4M15,18A6,6 0 0,0 21,12A6,6 0 0,0 15,6A6,6 0 0,0 9,12A6,6 0 0,0 15,18M3,12C3,14.61 4.67,16.83 7,17.65V19.74C3.55,18.85 1,15.73 1,12C1,8.27 3.55,5.15 7,4.26V6.35C4.67,7.17 3,9.39 3,12Z"
          prependtext=""
          removenonexistentselections="false"
          required="true"
          showemptyarrayasallselected="false"
          someselected="false"
          totalcount="0"
          usechips="false"
        />
      </v-col-stub>
      <v-col-stub
        class="pa-1"
        cols="12"
        lg="false"
        md="false"
        sm="6"
        tag="div"
        xl="false"
        xxl="false"
      >
        <selection-input-stub
          checkbox="true"
          coloractiveprepend="false"
          dark="false"
          disabled="false"
          disabledvalues=""
          emittoggleall="false"
          emptyequalsallselected="false"
          error="false"
          filled="true"
          groupidkey="id"
          groups=""
          groupsorderby="name"
          hiddenitemscount="0"
          hidesearch="true"
          hint="Unit"
          inverted="false"
          isgroupedselect="false"
          issingleselect="true"
          itemflag=""
          itemgroupidkey="groupId"
          items="[object Object],[object Object]"
          itemsecondarytext=""
          itemsmap="[object Object]"
          itemtertiarytext=""
          itemtext="name"
          itemvalue="value"
          loading="false"
          menuinputtype="primary"
          modelvalue="true"
          numericorderby="false"
          placeholder=""
          prepend-inner-icon="M1.39,18.36L3.16,16.6L4.58,18L5.64,16.95L4.22,15.54L5.64,14.12L8.11,16.6L9.17,15.54L6.7,13.06L8.11,11.65L9.53,13.06L10.59,12L9.17,10.59L10.59,9.17L13.06,11.65L14.12,10.59L11.65,8.11L13.06,6.7L14.47,8.11L15.54,7.05L14.12,5.64L15.54,4.22L18,6.7L19.07,5.64L16.6,3.16L18.36,1.39L22.61,5.64L5.64,22.61L1.39,18.36Z"
          prependtext=""
          removenonexistentselections="false"
          required="true"
          showemptyarrayasallselected="false"
          someselected="false"
          totalcount="0"
          usechips="false"
        />
      </v-col-stub>
    </v-row-stub>
    <evocon-v-checkbox-stub
      class="pl-2 my-2"
      dark="false"
      disabled="false"
      label="Hide changeover button from footer"
      modelvalue="false"
      sublabel=""
      truevalue="true"
    />
    <div
      class="d-flex align-center"
    >
      <span>
        <evocon-v-checkbox-stub
          class="pl-2 my-2"
          dark="false"
          disabled="false"
          label="Hide checklist pins from timeline"
          modelvalue="false"
          sublabel=""
          truevalue="true"
        />
      </span>
      <icon-with-tooltip-stub
        additionalclasses="ml-2"
        color=""
        icon="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
        iconclickedfn="[Function]"
        iconid=""
        iconsrc=""
        size="16"
        tooltiplocation="top"
        tooltiptext="Learn more"
      />
    </div>
    <v-row-stub
      class="mb-2"
      dense="false"
      density="default"
      nogutters="false"
      tag="div"
    >
      <v-col-stub
        class="pa-1"
        cols="12"
        lg="false"
        md="false"
        sm="false"
        tag="div"
        xl="false"
        xxl="false"
      >
        <selection-input-stub
          checkbox="true"
          coloractiveprepend="false"
          dark="false"
          disabled="false"
          disabledvalues=""
          emittoggleall="false"
          emptyequalsallselected="false"
          error="false"
          filled="true"
          groupidkey="id"
          groups="[object Object]"
          groupsorderby="name"
          hiddenitemscount="0"
          hidesearch="false"
          hint="Select which checklists appear in Shift View"
          inverted="false"
          isgroupedselect="true"
          issingleselect="false"
          itemflag=""
          itemgroupidkey="groupId"
          items="[object Object],[object Object],[object Object]"
          itemsecondarytext=""
          itemsmap="[object Object]"
          itemtertiarytext=""
          itemtext="name"
          itemvalue="id"
          loading="false"
          menuinputtype="primary"
          modelvalue=""
          numericorderby="false"
          placeholder=""
          prependtext=""
          removenonexistentselections="false"
          required="false"
          showemptyarrayasallselected="true"
          someselected="false"
          totalcount="0"
          usechips="false"
        />
      </v-col-stub>
    </v-row-stub>
  </v-card-text-stub>
  <v-card-actions-stub
    class="justify-end"
    tag="div"
  >
    <evocon-v-button-stub
      color=""
      icon=""
      iconcolor=""
      text="Close"
      textclass=""
      type="secondary"
    />
    <evocon-v-button-stub
      color="primary"
      icon=""
      iconcolor=""
      text="Save"
      textclass=""
      type="primary"
    />
  </v-card-actions-stub>
</div>
`;
